#pragma once 

#include "SencerController.h"
#include "Switch.h"

class PKMover {
public:

  PKMover();

  ~PKMover();

  void ReleaseHand();

private:


};