#pragma once

#include <Arduino.h>

class PiezoSpeaker {
public:

  PiezoSpeaker();

  ~PiezoSpeaker();

  void SoundNoteC();
  void SoundNoteD();
  void SoundNoteE();
  void SoundNoteF();
  void SoundNoteG();
  void SoundNoteA();
  void SoundNoteB();
  void SoundNoteC2();

private:


};